--- a/MathBomb/res/values/strings.xml
+++ b/MathBomb/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">MathBomb</string>
     <string name="action_settings">Settings</string>
     <string name="score">Score: </string>
-
+	<string name="setRange">Choose Range of Numbers: </string>
 </resources>
