--- a/MathBomb/res/values/strings.xml
+++ b/MathBomb/res/values/strings.xml
@@ -8,12 +8,14 @@
     <string name="highscore">High Score: </string>
     <string name="highscoretitle">HIGH SCORE</string>
     <string name="ok">Ok</string>
-	<string name="setRange">Choose Range of Numbers: </string>
-	
-	<string name="menuplay">Play!</string>
-	<string name="menuhighscore">High Score</string>
-	<string name="menuhowtoplay">How to Play</string>
-	<string name="menusettings">Settings</string>
-	<string name="menuexit">Exit</string>
-	
+    <string name="setRange">Choose Range of Numbers: </string>
+    <string name="menuplay">Play!</string>
+    <string name="menuhighscore">High Score</string>
+    <string name="menuhowtoplay">How to Play</string>
+    <string name="menusettings">Settings</string>
+    <string name="menuexit">Exit</string>
+    <string name="defaultvalue">0</string>
+    <string name="seconds"> sec(s)</string>
+	<string name="gameOver">Game Over!</string>
+	<string name="yourscoreis">Your score is </string>
 </resources>
